# Joby-eVtol-Simulation

./: .gitignore  CMakeLists.txt  README.md
src/: Battery.cpp  Battery.h  Simulator.cpp  Simulator.h  Vehicle.cpp  Vehicle.h  VehicleMetric.cpp  VehicleMetric.h  config.h  eVTOL.cpp
tests/: CMakeLists.txt  test_battery.cpp  test_simulator.cpp  test_vehicle.cpp  test_vehicle_metrics.cpp
